--- a/src/app/customers/view-customers/view-customers.component.html
+++ b/src/app/customers/view-customers/view-customers.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-2">
     <div class="card shadow">
         <div class="card-header position-relative">
-            <h1>Customers</h1>
-            <div class="button-container position-absolute top-0 end-0">
+            <h1 class="mt-2">Customers</h1>
+            <div class="button-container mt-2 me-2 position-absolute top-0 end-0">
                 <button mat-raised-button id="warnColor" class="">
                     <mat-icon>do_not_disturb_on</mat-icon>
                     Delete
