--- a/src/app/roles/view-roles-list/view-roles-list.component.html
+++ b/src/app/roles/view-roles-list/view-roles-list.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-2">
     <div class="card shadow">
-        <div class="card-header position-relative">
-            <h2>Roles</h2>
-            <div class="button-container position-absolute top-0 end-0">
+        <div class="card-header  position-relative">
+            <h2 class="mt-2">Roles</h2>
+            <div class="button-container mt-2 me-2 position-absolute top-0 end-0">
                 <button mat-raised-button id="warnColor">
                     <mat-icon>do_not_disturb_on</mat-icon>
                     Delete
@@ -37,8 +37,8 @@
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef style="width: 15%;"> Action </th>
                     <td mat-cell *matCellDef="let element" id="custom-table" style="width:10%;">
-                        <mat-icon style="color:black;" (click)="roleAction('EDIT',element)">edit</mat-icon>
-                        <mat-icon style="color:black;" (click)="deleteRole(element.id)">delete</mat-icon>
+                        <mat-icon style="color:#002855;" (click)="roleAction('EDIT',element)">edit</mat-icon>
+                        <mat-icon style="color:#FF7F32;" (click)="deleteRole(element.id)">delete</mat-icon>
                     </td>
                 </ng-container>
             
@@ -46,7 +46,7 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;" id="custom-table"></tr>
                 </table>
             
-                <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                <mat-paginator  [pageSizeOptions]="[5, 10, 20]"
                             showFirstLastButtons
                             aria-label="Select page of periodic elements">
                 </mat-paginator>
