--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 #custom-table{
-    border-bottom: 2px solid #FF7F32 !important; /* Change 'blue' to the desired color */
+    /* border-bottom: 2px solid #FF7F32 !important;  */
+    border-bottom: 2px solid #1D4F91;
   }
+
 
