--- a/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
+++ b/src/app/customers/customer-on-boarding/customer-on-boarding.component.html
@@ -5,7 +5,7 @@
         <div class="card-header">
             <h1 class="mt-2">Customer On-Boarding </h1>
         </div>
-        <mat-stepper #stepper linear>
+        <mat-stepper #stepper>
             <mat-step  errorMessage="Name is required." >
             <form >
                 <ng-template matStepLabel>Customer</ng-template>
@@ -17,7 +17,6 @@
                     </button>
                     </div>
                 </div>
-                
                     <div class="row">
                         <div class="col-md-12">
                             <mat-form-field appearance="outline" id="txtFormElements">
@@ -52,7 +51,7 @@
             </mat-step>
 
             <mat-step  errorMessage="Address is required.">
-            <form >
+            <form>
                 <ng-template matStepLabel>Projects</ng-template>
                 <div class="row">
                     <div class="col-md-12">
@@ -98,32 +97,10 @@
 
             <mat-step  errorMessage="Address is required.">
                 <form >
-                <ng-template matStepLabel>Users</ng-template>
+                <ng-template matStepLabel>Users</ng-template>  
                 <div class="row">
                     <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select Username</mat-label>
-                            <mat-select 
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.userName}}' *ngFor="let data of userList">{{data.userName}}</mat-option>
-                            </mat-select>
-                    </mat-form-field>
-                    </div>
-                </div>  
-                <div class="row">
-                    <div class="col-md-12">
-                        <mat-form-field appearance="outline" id="txtFormElements">
-                            <mat-label>Select email</mat-label>
-                            <mat-select 
-                            name="customerId"
-                            required
-                            >
-                            <mat-option value='{{data.email}}' *ngFor="let data of userList">{{data.email}}</mat-option>
-                            
-                            </mat-select>
-                    </mat-form-field>
+                        <app-asign-unasign-items [items]="dataSource" (selectedItemsChanged)="onSelectedItemsChanged($event)"></app-asign-unasign-items>
                     </div>
                 </div>  
                 <hr>
@@ -172,8 +149,56 @@
             </mat-step>
 
             <mat-step  errorMessage="Address is required.">
+                <form>
+                    <ng-template matStepLabel>Queues</ng-template>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <mat-form-field appearance="outline" id="txtFormElements" >
+                                <mat-label>Select Queues</mat-label>
+                                <mat-select  
+                                name="customerId"
+                                required
+                                >
+                                <mat-option value='{{data.projectCode}}' *ngFor="let data of projectList">{{data.projectCode}}</mat-option>
+                                </mat-select>
+                        </mat-form-field>
+                        </div>
+                    </div>   
+                    <hr> 
+                    <div class="float-end">
+                    <button mat-raised-button matStepperPrevious id="warnColor">Back</button>
+                    <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">Next</button>
+                    </div>
+                </form>
+                </mat-step>
+
+                <mat-step  errorMessage="Address is required.">
+                    <form>
+                        <ng-template matStepLabel>Library</ng-template>                  
+                        <div class="row">
+                            <div class="col-md-12">
+                                <mat-form-field appearance="outline" id="txtFormElements">
+                                    <mat-label>Field Library</mat-label>
+                                    <mat-select 
+                                    name="customerId"
+                                    required
+                                    >
+                                    <mat-option value='{{data.projectName}}' *ngFor="let data of projectList">{{data.projectName}}</mat-option>
+                                    </mat-select>
+                            </mat-form-field>
+                            </div>
+                        </div>  
+                        <hr> 
+                        <div class="float-end">
+                        <button mat-raised-button matStepperPrevious id="warnColor">Back</button>
+                        <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">Next</button>
+                        </div>
+                    </form>
+                    </mat-step>
+
+            <mat-step  errorMessage="Address is required.">
                 <form >
-                <ng-template matStepLabel>PageType</ng-template>
+                <ng-template matStepLabel>Page</ng-template>
                 <div class="row">
                     <div class="col-md-12">
                         <mat-form-field appearance="outline" id="txtFormElements">
@@ -204,7 +229,7 @@
                 <div class="float-end">
                     <button mat-raised-button  matStepperPrevious id="warnColor">Back</button>
                     <button mat-raised-button id="primaryColor" matStepperNext class="ms-2">
-                        Next<mat-icon>navigate_next</mat-icon>   
+                        Next   
                     </button>
                 </div>
                 </form>
@@ -214,8 +239,9 @@
             <ng-template matStepLabel>Done</ng-template>
             <div class="alert alert-success mt-2"><h2>You have successfully completed the on boarding.</h2> </div>
             <div class="float-end">
-                <button mat-raised-button  id="warnColor" (click)="stepper.reset()">Reset</button>
-                <button mat-raised-button  id="primaryColor" class="ms-2">Save and Finish </button>
+                <!-- <button mat-raised-button  id="warnColor" (click)="stepper.reset()">Reset</button> -->
+                <button mat-raised-button  id="primaryColor" class="ms-2">Save as Drafts </button>
+                <button mat-raised-button  id="primaryColor" class="ms-2">Send to Approval </button>
                 
             </div>
             </mat-step>
