--- a/src/app/roles/add-roles/add-roles.component.html
+++ b/src/app/roles/add-roles/add-roles.component.html
@@ -4,15 +4,18 @@
             <form [formGroup]="rolesForm">
                 <div class="card border border-0">
                         <div class="p-2">
-                            <h1>{{actionMessage}} ROLES</h1><hr>
+                            <h1>{{actionMessage}} Roles</h1><hr>
                         </div>
                     <div class="card-body">
-                        <div class="row">
+                        <div class="row mb-1">
                             <div class="col-md-8">
                                     <mat-form-field appearance="outline" id="txtFormElements">
                                       <mat-label>Role Name</mat-label>
-                                      <input matInput placeholder="Enter Role Name" name="roleName" formControlName="roleName" required>
+                                      <input matInput placeholder="ex Supervisor Role" name="roleName" formControlName="roleName" required>
                                       <mat-icon matSuffix>edit</mat-icon>
+                                      <mat-error *ngIf="rolesForm.get('roleName').invalid && (rolesForm.get('roleName').touched || rolesForm.get('roleName').dirty)">
+                                        This field is required.
+                                      </mat-error>
                                     </mat-form-field>
                             </div>
                             <div class="col-md-4">
@@ -28,19 +31,22 @@
                         </div>
                             <mat-form-field appearance="outline" id="textAreaFormElements" >
                               <mat-label>Role Description</mat-label>
-                              <textarea matInput name="description" formControlName="description" placeholder="Enter Description" required></textarea>
+                              <textarea matInput name="description" formControlName="description" placeholder="ex.This role will be allow add/edit/del ... " required></textarea>
                               <mat-icon matSuffix>edit</mat-icon>
+                              <mat-error *ngIf="rolesForm.get('description').invalid && (rolesForm.get('description').touched || rolesForm.get('description').dirty)" class="mb-5">
+                                This field is required.
+                              </mat-error>
                             </mat-form-field>
                     </div>
                     <hr>
                     <div class="Action"> 
-                        <button mat-raised-button id="primaryColor" [disabled]="!rolesForm.valid" (click)="addUpdateRole()" class="float-end p-3">
-                            <mat-icon>add</mat-icon>
-                            {{actionMessage}} And Continue
-                        </button>
                         <button mat-raised-button id="warnColor" (click)="closeDialog()" class="float-end p-3">
                             <mat-icon>cancel</mat-icon>
                             Cancel
+                        </button>
+                        <button mat-raised-button id="primaryColor" [disabled]="!rolesForm.valid" (click)="addUpdateRole()" class="float-end p-3">
+                            <mat-icon>add_circle</mat-icon>
+                            Save and Continue
                         </button>
                    </div> 
                 </div>
